# oscar_mpc_planner_mr_modification

./: DOCUMENTATION_UPDATE_SUMMARY.md  README.md
docs/: JOINT_PLANNING_DEBUG_AND_IMPLEMENTATION.md  JOINT_PLANNING_IMPLEMENTATION_GUIDE.md  JOINT_PLANNING_INTEGRATION_DESIGN.md  MPC_SOLVER_CREATION_GUIDE.md  README.md  README_GUIDANCE_CONSTRAINTS.md  TOPOLOGY_TRACKING_DIAGNOSTIC_ANALYSIS.md  guidance_constraints_diagrams.md  guidance_constraints_documentation.md  guidance_constraints_quick_reference.md  jackal_planner_real_vs_simulator_discrepancies.md  mpc_pipeline_documentation.md  rviz_visualization_documentation.md  topology_metadata_feature.md
mpc_planner/src/: data_preparation.cpp  experiment_util.cpp  planner.cpp
mpc_planner_communication/: CMakeLists.txt  package.xml
mpc_planner_communication/include/mpc_planner_communication/: communication_triggers.h
mpc_planner_communication/src/: communication_triggers.cpp
mpc_planner_dashboard/: CMakeLists.txt  package.xml  plugin.xml  setup.py  widget_definitions.json
mpc_planner_dashboard/perspectives/: MPC_Dashboard_And_Rviz.perspective
mpc_planner_dashboard/resource/: mpc_planner_dashboard.ui
mpc_planner_dashboard/src/mpc_planner_dashboard/: mpc_planner_dashboard.py
mpc_planner_jackal/: CMakeLists.txt  package.xml
mpc_planner_jackal/config/: guidance_planner.yaml  settings.yaml
mpc_planner_jackal/docs/: obstacle_processing_documentation.md
mpc_planner_jackal/launch/: ros1_jackal.launch  ros1_jackal_test_jules.launch
mpc_planner_jackal/rviz/: ros1.rviz
mpc_planner_jackal/scripts/: generate_jackal_solver.py
mpc_planner_jackal/src/: jules_ros1_real_jackalplanner.cpp  ros1_jackal.cpp
mpc_planner_jackalsimulator/: CMakeLists.txt  jackal1.json  jackal1_planner.json  jackal2.json  jackal2_planner.json  jackal3_planner.json  package.xml
mpc_planner_jackalsimulator/config/: guidance_planner.yaml  settings.yaml
mpc_planner_msgs/: CMakeLists.txt  package.xml
mpc_planner_msgs/msg/: Gaussian.msg  MPCMetrics.msg  ObstacleGMM.msg
mpc_planner_msgs/srv/: GetOtherTrajectories.srv
mpc_planner_types/: CMakeLists.txt  package.xml
mpc_planner_util/: CMakeLists.txt
solver_generator/: generate_acados_solver.py  solver_model.py
(+46 files in other folders)
