<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_planner_communication</name>
  <version>0.0.0</version>
  <description>Communication strategies and triggers for multi-robot MPC planning</description>
  <maintainer email="j.p.zwanenburg@student.tudelft.nl">Jules Zwanenburg</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mpc_planner_types</depend>
  <depend>mpc_planner</depend>
  <depend>ros_tools</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
